deploy/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moviegeek-deployment
  labels:
    app: moviegeek
spec:
  replicas: 3
  selector:
    matchLabels:
      app: moviegeek
  template:
    metadata:
      labels:
        app: moviegeek
    spec:
      containers:
        - image: registry.digitalocean.com/evening-popcorn-registry/moviegeek:latest
          imagePullPolicy: Always
          name: sample-container
          ports:
            - containerPort: 8080
              name: fastapi
---
apiVersion: v1
kind: Service
metadata:
  name: moviegeek-service
spec:
  selector:
    app: moviegeek
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
