deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moviegeek-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - eveningpopcorn.dev
      secretName: hello-kubernetes-tls
  rules:
  - host: "eveningpopcorn.dev"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: moviegeek-service
            port:
              number: 80
